--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-client-encryption": "^2.9.1",
     "mongoose": "^7.6.3",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
-    "react-top-loading-bar": "^2.3.1"
+    "react-top-loading-bar": "^2.3.1",
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10",
